# routing-rs

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  pyproject.toml
cli/: Cargo.toml
cli/src/: main.rs
dsn-files/: Issue015-StackOverflow.dsn
dsn-parser/: Cargo.toml  Justfile  build.rs
dsn-parser/examples/: cli.rs
dsn-parser/grammars/: dsn.pest
dsn-parser/src/: dsn.pest  dsn1.pest  lib.rs  pcb.rs  syntax_tree.rs
gui/: Cargo.toml
gui/src/: app.rs  main.rs
libdsn_parser/: Cargo.toml
libdsn_parser/src/: lib.rs  main.rs
router/: Cargo.toml
router/src/: bfs.rs  export.rs  grid.rs  lib.rs  net_order.rs  pad_map.rs  serialise.rs
src/: lib.rs  parser.rs  pcb.rs
tests/: test_lib.rs
