[package]
name = "dsn-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dsn_parser"
crate-type = ["lib", "cdylib"]

[dependencies]
anyhow = "1.0.100"
m_lexer = "0.0.4"
pyo3 = { version = "0.27.1", features = ["anyhow", "serde"] }
rowan = { version = "0.16.1", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tracing = "0.1.41"

[dev-dependencies]
glob = "0.3.3"
tracing-test = "0.2.5"
