[package]
name = "dsn-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dsn_parser"
crate-type = ["lib", "cdylib"]

[dependencies]
anyhow = "1.0.100"
pest = "2.8.3"
pest_derive = { version = "2.8.3", features = ["grammar-extras"] }
pom = "3.4.0"
pyo3 = { version = "0.27.1", features = [
    "anyhow",
    "serde",
    "abi3-py39",
    "auto-initialize",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tracing = "0.1.41"

[dev-dependencies]
argh = "0.1.13"
glob = "0.3.3"
tracing-test = "0.2.5"
